security: implementacao de RBAC, isolamento de dados por analista e remocao de rotas de setup